# SEER

./: .gitignore  LICENSE  Makefile  PROJECT_PLAN.md  README.md  SUBMISSION_GUIDE.md  TODO.md  pyproject.toml  requirements.txt  work1.md
Paper_style_extract/mingsheng_long/: 01_overall_style.md  02_paper_structure.md  03_abstract_and_intro.md  04_naming_and_terminology.md  05_problem_formulation.md  06_method_section.md  07_theory_and_analysis.md  08_evaluation.md  09_writing_microconventions.md  10_paper_dissections.md  11_apply_to_seer.md  README.md
Paper_style_extract/mingsheng_long/_raw_research/: time_series_style.md  (+1 more)
Paper_style_extract/patrick/: 01_overall_style.md  02_paper_structure.md  03_abstract_and_intro.md  04_naming_and_terminology.md  05_evaluation.md  06_writing_microconventions.md  07_paper_dissections.md  08_apply_to_seer.md  README.md
experiments/e1_predictability/: README.md  analyze.py  run.sh
experiments/e2_pareto/: README.md  analyze.py  run.sh
experiments/e3_throughput/: BENCH.md  README.md  bench_vllm.py  make_trace.py  run.sh  serve_vllm.sh
experiments/e4_arch/: README.md
experiments/e6_policy/: README.md
experiments/e7_generalization/: README.md
seer/: __init__.py
seer/eval/: __init__.py  block_stats.py  metrics.py  runner.py  sim.py
seer/lap/: __init__.py  dataset.py  export.py  features.py  infer.py  losses.py  models.py  train.py
seer/trace/: __init__.py  collect.py  datasets.py  hook.py  loader.py  schema.py
tests/: conftest.py  test_features.py  test_metrics.py  test_models.py  test_policies.py  test_trace_schema.py
(+8 files in other folders)
