[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seer"
version = "0.1.0"
description = "SEER: Learning to Evict KV-Cache by Predicting Future Attention"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [{name = "Anonymous"}]
keywords = ["llm", "kv-cache", "inference", "attention", "neurips"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["seer*"]
exclude = ["tests*", "experiments*", "paper*", "notes*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["data", "checkpoints", "paper", ".git"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]  # handled by formatter
